added tcp listener and generator, added cmake build type: release and debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,21 @@
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 
-project(udp_generator_listener CXX)
-
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+project(generator_listener CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED on)
-set(CMAKE_REQUIRED_FLAGS -std=c++17 -Wall)
+
+if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    set(CMAKE_REQUIRED_FLAGS -std=c++17 -Wall)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug/lib/)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug/lib/)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug/bin/)
+endif()
+if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
+    set(CMAKE_REQUIRED_FLAGS -std=c++17 -Wall -Wextra)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release/lib/)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release/lib/)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release/bin/)
+endif()
 
 find_library(PTHREAD_LIB pthread)
 if(NOT PTHREAD_LIB)
