changed set files: added new .hpp classes files, .cpp -> .hpp; remove vector of threads in tcplistener

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,21 @@ cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 project(generator_listener CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED on)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
 
-if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-    set(CMAKE_REQUIRED_FLAGS -std=c++17 -Wall)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug/lib/)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug/lib/)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug/bin/)
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+    message(STATUS "Default build configuration: Release")
 endif()
-if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
-    set(CMAKE_REQUIRED_FLAGS -std=c++17 -Wall -Wextra)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release/lib/)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release/lib/)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release/bin/)
+
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+    set(CMAKE_REQUIRED_FLAGS -std=c++17 -Wall -g -O0)
+endif()
+
+if (CMAKE_BUILD_TYPE MATCHES Release)
+    set(CMAKE_REQUIRED_FLAGS -std=c++17 -O3 -Wall -Wextra -pedantic)
 endif()
 
 find_library(PTHREAD_LIB pthread)
@@ -22,7 +25,7 @@ if(NOT PTHREAD_LIB)
     message(FATAL_ERROR "pthread library not found")
 endif()
 
-set(SOURCES main.cpp generator/generator.cpp listener/listener.cpp)
+set(SOURCES main.cpp)
 
 
 add_executable(main ${SOURCES})
